<resources>
    <string name="app_name">Food Store</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_food_list">Food</string>
    <string name="nav_user_list">Profile</string>
    <string name="nav_vendor_list">Vendor</string>
    <string name="nav_order_list">Order</string>
    <string name="nav_bill_list">Bill</string>
    <string name="nav_login">Login</string>
    <string name="nav_help">Help</string>
    <string name="nav_feedback">Give us feedback</string>
    <string name="nav_support">Support</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_add">Add</string>
    <string name="action_share">Share</string>
    <string name="action_done">Done</string>
    <string name="select_type">Select type</string>
    <string name="user_image">User Image</string>
    <string name="action_change_image">Change Image</string>
    <string name="order_detail_field_1">No.</string>
    <string name="order_detail_field_2">Food\'s name</string>
    <string name="order_detail_field_3">Amount</string>
    <string name="order_detail_field_4">Cost</string>
    <string name="order_total">Total</string>
    <string name="order_done">Done</string>
    <string name="order_item">ITEM</string>
    <string name="order_amount">QTY</string>
    <string name="order_vat">VAT</string>
    <string name="customer_order">ADD TO CART</string>
    <string name="action_view_cart">Cart</string>
    <string name="order_qty">QTY</string>
    <string name="app_name_login">FOOD STORE</string>
    <string name="enjoy">Hope you enjoy this app!</string>
    <string name="order_button_sell">SELL NOW</string>
    <string name="order_button_receipt">RECEIPT NOW</string>
    <string name="order_button_issue">ISSUE NOW</string>
    <string name="about_food_store_1">A convenient utility for managing, ordering, selling, storing invoices for a food store. In a flat and fast-paced world, information technology has evolved in all areas of life and even in the food industry.</string>
    <string name="about_food_store_2">Making sales, orders and management simpler than ever!</string>
    <string name="nav_about">About</string>
</resources>
