<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        android:icon="@drawable/ic_add_white_24dp"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider">

    </item>
</menu>