<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    android:scrollbarStyle="insideInset"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main">

        </include>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/info_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/info_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/info_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/info_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/info_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#212121" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/info_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#212121" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/FirstText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_detail_field_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121">

            </TextView>

            <TextView
                android:id="@+id/SecondText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/order_detail_field_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121">

            </TextView>

            <TextView
                android:id="@+id/ThirdText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_detail_field_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121">

            </TextView>

            <TextView
                android:id="@+id/FourthText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_detail_field_4"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121">

            </TextView>
        </LinearLayout>

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:textColor="#212121"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_weight="80"
                android:gravity="center"
                android:text="@string/order_total"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/info_total"
                android:layout_width="0dp"
                android:textColor="#212121"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_height="wrap_content"
                android:layout_weight="20"/>
        </LinearLayout>
        <CheckBox
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#212121"
            android:text="@string/order_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>
</ScrollView>