<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".BillDetailActivity"
    android:layout_height="match_parent">


    <android.support.v4.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_main" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <com.example.tienthanh.customfonts.MyTextView
                    android:id="@+id/info_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <com.example.tienthanh.customfonts.MyTextView
                    android:id="@+id/info_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:textColor="#000"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle4">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/bill_detail" />
            </LinearLayout>

            <com.example.tienthanh.customfonts.MyTextView
                android:id="@+id/info_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textColor="#000"
                android:textSize="12sp" />

            <com.example.tienthanh.customfonts.MyTextView
                android:id="@+id/info_name_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#000"
                android:textSize="12sp" />

            <com.example.tienthanh.customfonts.MyTextView
                android:id="@+id/info_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#000"
                android:textSize="12sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="30dp"
                android:background="#b1b1b1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <com.example.tienthanh.customfonts.MyTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/order_item"
                    android:textColor="#b1b1b1"
                    android:textSize="12sp" />

                <com.example.tienthanh.customfonts.MyTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="0.8"
                    android:gravity="center"
                    android:text="@string/order_amount"
                    android:textColor="#b1b1b1"
                    android:textSize="12sp" />

                <com.example.tienthanh.customfonts.MyTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="Rate"
                    android:textColor="#b1b1b1"
                    android:textSize="12sp" />

                <com.example.tienthanh.customfonts.MyTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="Amount"
                    android:textColor="#b1b1b1"
                    android:textSize="12sp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

            </android.support.v7.widget.RecyclerView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="#b1b1b1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <com.example.tienthanh.customfonts.MyTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:text="@string/order_total"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <com.example.tienthanh.customfonts.MyTextView
                    android:id="@+id/info_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:textColor="#000"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>